--- a/_downloads/af0caf6d7af0dda755f4c9d7af9ccc2c/quickstart_tutorial.ipynb
+++ b/_downloads/af0caf6d7af0dda755f4c9d7af9ccc2c/quickstart_tutorial.ipynb
@@ -48,12 +48,12 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "EzBcFm2dh-F-",
-        "outputId": "8d684859-4636-4faf-f05d-bee6ada76ec7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "EzBcFm2dh-F-",
+        "outputId": "8d684859-4636-4faf-f05d-bee6ada76ec7"
       },
       "outputs": [
         {
@@ -201,6 +201,10 @@
       },
       "outputs": [],
       "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
         "# Get cpu, gpu or mps device for training.\n",
         "device = (\n",
         "    \"cuda\"\n",
@@ -278,7 +282,7 @@
         "        # Output layer:\n",
         "        x = self.lin2(x) # linear = 7\n",
         "\n",
-        "        x.softmax(dim=1)\n",
+        "        x = F.softmax(dim=1)\n",
         "\n",
         "        return x\n",
         "\n",
